fix z-index bug with whitenoise bar in header

--- a/src/components/shared/header/Header.scss
+++ b/src/components/shared/header/Header.scss
@@ -56,4 +56,5 @@
   width: 100%;
   height: 12px;
   filter: invert(100%);
+  z-index: -1;
 }
